Cleanup pom